--- a/app/assets/stylesheets/api/user_image_modal.scss
+++ b/app/assets/stylesheets/api/user_image_modal.scss
@@ -78,10 +78,6 @@
   margin-bottom: 8px;
 }
 
-.comments > li {
-  margin-bottom: 8px;
-}
-
 @media (min-width: 1000px) {
   height: 100%;
   max-width: 1000px;
